--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Tiagolopes\\CleanArchitecture\\": "src/"
+            "Tiagolopes\\CleanArchitecture\\": "src/",
+            "Test\\": "test/"
         }
     },
     "authors": [
@@ -17,5 +18,8 @@
         "php": "^8.4",
         "ext-pdo": "*",
         "symfony/mailer": "^7.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.2"
     }
 }
